--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -1,12 +1,11 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: #11053f;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(60, 60, 60);
     font-weight: bold;
     margin: 1em;
@@ -14,7 +13,11 @@ body{
     justify-content: center;
 }
 
-main{
+body, button, input, select, textarea {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+main {
     position: relative;
     background-color: rgb(234, 231, 245);
     width: fit-content;
@@ -23,22 +26,19 @@ main{
     box-shadow: 5px 5px 12px rgba(0, 0, 0, 0.3);
 }
 
-.container{
+.container {
     margin-top: 2.5%;
     left: 50%;
-    transform: translate(-50%);   
+    transform: translate(-50%);
 }
 
-p, #titulo{
+p, #titulo {
     color: rgb(50, 50, 50);
     text-align: center;
     margin-top: 1rem;
 }
 
-main input[type=text],
-main input[type=email],
-main input[type=date],
-select{
+main input[type=text], main input[type=email], main input[type=date], select {
     border: none;
     background-color: #d0dde470;
     cursor: text;
@@ -49,7 +49,7 @@ select{
     outline: none;
 }
 
-.linha1{
+.linha1 {
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-row: auto;
@@ -57,7 +57,7 @@ select{
     margin: 1em;
 }
 
-.linha2{
+.linha2 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row: auto;
@@ -65,7 +65,7 @@ select{
     margin: 1em;
 }
 
-.linha3{
+.linha3 {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-row: auto;
@@ -73,7 +73,7 @@ select{
     margin: 1em;
 }
 
-.linha4{
+.linha4 {
     display: grid;
     grid-template-columns: 0.5fr 1fr 1.5fr;
     grid-row: auto;
@@ -81,7 +81,7 @@ select{
     margin: 1em;
 }
 
-.linha5{
+.linha5 {
     display: grid;
     grid-template-columns: 1fr 0.5fr 1.5fr;
     grid-row: auto;
@@ -89,7 +89,7 @@ select{
     margin: 1em;
 }
 
-.linha6{
+.linha6 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-row: auto;
@@ -97,29 +97,29 @@ select{
     margin: 1em;
 }
 
-.campo{
+.campo {
     display: grid;
     padding: 0.5em;
 }
 
-.campo label{
+.campo label {
     margin-bottom: 0.2em;
     display: block;
 }
 
-.campo input::placeholder{
+.campo input::placeholder {
     color: rgba(0, 0, 0, 0.5);
 }
 
-.campo input:focus, .campo select:focus{
+.campo input:focus, .campo select:focus {
     background: #7e8c9470;
 }
 
-.required::after{
-    content:"*";
+.required::after {
+    content: "*";
 }
 
-.botao{
+.botao {
     background-color: #5f7c8a;
     padding: 0.5em;
     font: 1em sans-serif;
@@ -135,7 +135,6 @@ select{
 }
 
 .botao:hover {
-    background: #305c6e; 
+    background: #305c6e;
     transition: 0.3s;
 }
-
