--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -45,7 +45,7 @@ main input[type=text], main input[type=email], main input[type=date], select {
     border-radius: 0.8em;
     padding: 0.4em;
     font-size: 0.92em;
-    font-family: 'Roboto', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     outline: none;
 }
 
